apps/base/amig-erp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amig-erp
  labels:
    name: amig-erp
    app.kubernetes.io/part-of: amig-erp
