apps/base/amig-erp/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: amig-erp-backend
  namespace: amig-erp
  labels:
    app: amig-erp-backend
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: amig-erp-backend
---
apiVersion: v1
kind: Service
metadata:
  name: amig-erp-web
  namespace: amig-erp
  labels:
    app: amig-erp-web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: amig-erp-web
